--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,9 @@
 
 <body>
   <header class="header">Header</header>
+  <main class="content"></main>
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 </html>
