--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
 
 <body>
   <header class="header">Header</header>
-  <main class="content"></main>
+  <main class="content">
+    <section class="section">
+      Bottom section
+    </section>
+  </main>
   <footer class="footer">
     Footer
   </footer>
