--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-  <header class="header">
-    Header
-  </header>
+  <header class="header">Header</header>
   <main class="content">
     <section class="section">
       Top section
+    </section>
+    <section class="section">
+      Bottom section
     </section>
   </main>
   <footer class="footer">
